--- a/digi/src/index.css
+++ b/digi/src/index.css
@@ -1,33 +1,60 @@
+@import url("https://fonts.cdnfonts.com/css/raleway-5");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html,
+body {
+  max-width: 100%;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+/* * { */
+/* justify-content: center; */
+/* horizontal text*/
+/* align-items: center; */
+/* vertical text*/
+/* } */
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Raleway", sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  display: flex;
+  width: 100%;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: smooth;
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #000000;
+  /* imppppp */
+  /*buttton ka clolor*/
   text-decoration: inherit;
 }
+
 a:hover {
-  color: #535bf2;
+  /* color: #6c6c6c; */
 }
 
 body {
   margin: 0;
   display: flex;
+  /*?? */
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  /* flex-wrap: wrap; */
 }
 
 h1 {
@@ -42,27 +69,768 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  /* background-color: #1a1a1a; */
   cursor: pointer;
-  transition: border-color 0.25s;
+  /* transition: border-color 0.25s; */
 }
+
 button:hover {
-  border-color: #646cff;
+  /* border-color: #646cff; */
 }
+
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  /* outline: 4px auto -webkit-focus-ring-color; */
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    /* color: #213547; */
+    /* background-color: #129140; */
+    background-color: transparent;
   }
+
   a:hover {
-    color: #747bff;
+    /* color: #747bff; */
   }
+
   button {
-    background-color: #f9f9f9;
+    /* background-color: #a51313; */
+    background-color: transparent;
   }
+}
+
+.logo {
+  width: 190px;
+  height: 70px;
+  display: block;
+  /* Make sure it's a block-level element */
+  /* margin: 10px;  */
+  /* min-height: 50px;
+  min-width: 30px; */
+  padding: 0px;
+}
+
+/* ---------------------------------------------------------------------------------------------------- */
+/* Hero section */
+
+.container {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  /* width:1000px; */
+  /* height:600px; */
+  /* padding:50px; */
+  background-color: #f5f5f5;
+  box-shadow: 0 30px 50px #dbdbdb;
+}
+
+#slide {
+  /* width:max-content; */
+  width: 100%;
+  margin-top: 50px;
+}
+
+.item {
+  width: 200px;
+  /* width: 100%; */
+  /*card overlap */
+  height: 300px;
+  /* height: auto;   no card */
+  background-position: 50% 50%;
+  display: inline-block;
+  transition: 0.9s;
+  background-size: cover;
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  transform: translate(0, -50%);
+  border-radius: 20px;
+  box-shadow: 0 30px 50px #505050;
+}
+
+@media (max-width: 767px) {
+  /* Override the height for mobile view */
+  .item {
+    width: fit-content;
+    overflow-x: hidden;
+  }
+}
+
+.item:nth-child(1),
+.item:nth-child(2) {
+  left: 0;
+  top: 0;
+  transform: translate(0, 0);
+  border-radius: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: none;
+}
+
+.item:nth-child(3) {
+  left: 50%;
+}
+
+.item:nth-child(4) {
+  left: calc(50% + 220px);
+}
+
+.item:nth-child(5) {
+  left: calc(50% + 440px);
+}
+
+.item:nth-child(n + 6) {
+  left: calc(50% + 660px);
+  opacity: 0;
+}
+
+.item .content {
+  position: absolute;
+  top: 50%;
+  left: 100px;
+  width: 300px;
+  text-align: left;
+  padding: 0;
+  color: #eee;
+  transform: translate(0, -50%);
+  display: none;
+  /* font-family: system-ui; */
+  font-family: "Chillax", sans-serif;
+}
+
+.item:nth-child(2) .content {
+  display: block;
+  z-index: 11111;
+}
+
+.item .name {
+  font-size: 30px;
+  font-weight: bold;
+  opacity: 0;
+  animation: showcontent 1s ease-in-out 1 forwards;
+}
+
+.item .des {
+  margin: 20px 0;
+  opacity: 0;
+  animation: showcontent 1s ease-in-out 0.3s 1 forwards;
+}
+
+.item button {
+  padding: 10px 20px;
+  border: none;
+  opacity: 0;
+  animation: showcontent 1s ease-in-out 0.6s 1 forwards;
+}
+
+@keyframes showcontent {
+  from {
+    opacity: 0;
+    transform: translate(0, 100px);
+    filter: blur(33px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate(0, 0);
+    filter: blur(0);
+  }
+}
+
+/* ---------------------------------------------------------------------------------------------------- */
+/* info section */
+
+/* ---------------------------------------------------------------------------------------------------- */
+/* serv section */
+
+/* body{margin-top:20px;} */
+
+/* Feature Box
+---------------------*/
+.feature-box-1 {
+  padding: 32px;
+  box-shadow: 0 0 30px rgba(31, 45, 61, 0.125);
+  margin: 15px 0;
+  position: relative;
+  z-index: 1;
+  border-radius: 10px;
+  overflow: hidden;
+  -moz-transition: ease all 0.35s;
+  -o-transition: ease all 0.35s;
+  -webkit-transition: ease all 0.35s;
+  transition: ease all 0.35s;
+  top: 0;
+}
+
+.feature-box-1 * {
+  -moz-transition: ease all 0.35s;
+  -o-transition: ease all 0.35s;
+  -webkit-transition: ease all 0.35s;
+  transition: ease all 0.35s;
+}
+
+.feature-box-1 .icon {
+  width: 70px;
+  height: 70px;
+  line-height: 70px;
+  background: #fc5356;
+  color: #ffffff;
+  text-align: center;
+  border-radius: 50%;
+  margin-bottom: 22px;
+  font-size: 27px;
+}
+
+.feature-box-1 .icon i {
+  line-height: 70px;
+}
+
+.feature-box-1 h5 {
+  color: #20247b;
+  font-weight: 600;
+}
+
+.feature-box-1 p {
+  margin: 0;
+}
+
+.feature-box-1:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: auto;
+  right: 0;
+  border-radius: 10px;
+  width: 0;
+  background: #20247b;
+  z-index: -1;
+  -moz-transition: ease all 0.35s;
+  -o-transition: ease all 0.35s;
+  -webkit-transition: ease all 0.35s;
+  transition: ease all 0.35s;
+}
+
+.feature-box-1:hover {
+  top: -5px;
+}
+
+.feature-box-1:hover h5 {
+  color: #ffffff;
+}
+
+.feature-box-1:hover p {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.feature-box-1:hover:after {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  left: 0;
+  right: auto;
+}
+
+.section {
+  padding: 100px 0;
+  position: relative;
+}
+
+.section-title {
+  padding-bottom: 45px;
+}
+
+.section-title h2 {
+  font-weight: 700;
+  color: #20247b;
+  font-size: 45px;
+  margin: 0 0 15px;
+  border-left: 5px solid #fc5356;
+  padding-left: 15px;
+}
+
+/* ---------------------------------------------------------------------------------------------------- */
+/* testimonial section */
+
+.test-bg {
+  background: linear-gradient(
+    90deg,
+    #44ff9a -0.55%,
+    #44b0ff 22.86%,
+    #8b44ff 48.36%,
+    #ff6644 73.33%,
+    #ebff70 99.34%
+  );
+}
+
+/* ---------------------------------------------------------------------------------------------------- */
+/* info section */
+
+/* Base styles for the slider */
+.slider {
+  background: white;
+  box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.125);
+  height: 100px;
+  margin: auto;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  /* Set width to 100% for responsiveness */
+}
+
+/* Styles for the gradient overlays */
+.slider::before,
+.slider::after {
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  content: "";
+  height: 100px;
+  position: absolute;
+  width: 20%;
+  /* Set width to 20% for responsiveness */
+  z-index: 2;
+}
+
+.slider::after {
+  right: 0;
+  top: 0;
+  transform: rotateZ(180deg);
+}
+
+.slider::before {
+  left: 0;
+  top: 0;
+}
+
+/* Styles for the slide track */
+.slide-track {
+  animation: scroll 40s linear infinite;
+  display: flex;
+  width: calc(250px * 14);
+}
+
+/* Styles for individual slides */
+.slide {
+  height: 100px;
+  width: 250px;
+}
+
+/* Keyframes for the scrolling animation */
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(calc(-250px * 7));
+  }
+}
+
+/* Media query for screens smaller than 768px */
+@media screen and (max-width: 768px) {
+  .slider {
+    height: 70px;
+    /* Adjust height for smaller screens if needed */
+  }
+
+  .slider::before,
+  .slider::after {
+    width: 30%;
+    /* Adjust width for smaller screens if needed */
+  }
+
+  .slide {
+    width: 150px;
+    /* Adjust width for smaller screens if needed */
+  }
+
+  @keyframes scroll {
+    0% {
+      transform: translateX(0);
+    }
+
+    100% {
+      transform: translateX(calc(-150px * 7));
+    }
+  }
+}
+
+/* ================================================================================ */
+
+.column {
+  box-sizing: border-box;
+  flex: 1;
+  padding: 20px;
+}
+
+.text-column {
+  background-color: #f0f0f0;
+  /* optional background color for the text column */
+}
+
+.image-column {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.image-column img {
+  max-width: 100%;
+  height: auto;
+}
+
+.bg-land {
+  background-image: url("https://i.postimg.cc/4Ncg9Jcm/Whats-App-Image-2024-01-17-at-16-34-05-656c8949.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  /* width: 98.7vw; */
+  /* width: 100%;  */
+  /* height: 100vh; */
+  /* position: relative;  */
+  /* overflow: hidden; */
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(224,184,35) 100%); */
+}
+
+.bg-info {
+  background-image: url("/bgser1.png");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  /* width: 98.7vw; */
+  /* width: 100%;  */
+  /* height: 100vh; */
+  /* position: relative;  */
+  /* overflow: hidden; */
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(224,184,35) 100%); */
+}
+
+.bg-ser {
+  /* background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%); */
+
+  /* background-image: url('/y10.png'); */
+
+  background-image: url("/bgser1.png");
+  /* background-image: url('/darkbg1.png'); */
+  /* background-image: url('/darkbg2.png'); */
+  /* background-image: url('/darkbg3.png'); */
+  /* background-image: url('/darkbg5.png'); */
+  background-size: cover;
+  background-position: center;
+  /* background-attachment: fixed; */
+  /* width: 98.7vw; */
+  /* width: 100%;  */
+  /* height: 100vh; */
+  position: relative;
+  /*not needed i guess*/
+  /* overflow: hidden; */
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* background: rgb(251,247,226); */
+  /* background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(255,193,0) 100%); */
+  /* background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(224,184,35) 100%); */
+}
+
+.bg-blog {
+  background-image: url("/bgyel2.png");
+  background-size: cover;
+  background-position: center;
+  /* background-attachment: fixed; */
+  /* width: 98.7vw; */
+  /* width: 100%;  */
+  /* height: 100vh; */
+  position: relative;
+  /*not needed i guess*/
+  /* overflow: hidden; */
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(224,184,35) 100%); */
+}
+
+/* =-================================================================== */
+
+/* @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap'); */
+/* *{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+} */
+.wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  /* background: linear-gradient(-135deg, #ffe45c, #ffffff); */
+  background: #f6c612;
+  /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
+  /* clip-path: circle(25px at calc(0% + 45px) 45px); */
+  clip-path: circle(25px at calc(100% - 45px) 45px);
+  transition: all 0.3s ease-in-out;
+  z-index: 50;
+}
+#active:checked ~ .wrapper {
+  clip-path: circle(75%);
+  z-index: 50;
+}
+.menu-btn {
+  position: fixed;
+  z-index: 60;
+  right: 20px;
+  /* left: 20px; */
+  top: 20px;
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  line-height: 50px;
+  border-radius: 50%;
+  font-size: 20px;
+  /* color: #000000; */
+  cursor: pointer;
+  /* background: linear-gradient(-135deg, #ffe45c, #ffffff); */
+  /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
+  transition: all 0.3s ease-in-out;
+}
+#active:checked ~ .menu-btn {
+  background: #ffffff;
+  color: #4158d0;
+}
+#active:checked ~ .menu-btn i:before {
+  content: "\f00d";
+}
+.wrapper ul {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  list-style: none;
+  text-align: center;
+}
+.wrapper ul li {
+  margin: 5px 0;
+}
+.wrapper ul li a {
+  color: none;
+  text-decoration: none;
+  font-size: 30px;
+  font-weight: 500;
+  padding: 5px 30px;
+  color: #fff;
+  position: relative;
+  line-height: 50px;
+  transition: all 0.3s ease;
+}
+.wrapper ul li a:after {
+  position: absolute;
+  content: "";
+  background: #fff;
+  width: 100%;
+  height: 50px;
+  left: 0;
+  border-radius: 50px;
+  transform: scaleY(0);
+  z-index: -1;
+  transition: transform 0.3s ease;
+}
+.wrapper ul li a:hover:after {
+  transform: scaleY(1);
+}
+.wrapper ul li a:hover {
+  color: #4158d0;
+}
+input[type="checkbox"] {
+  display: none;
+}
+.content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  text-align: center;
+  width: 100%;
+  color: #202020;
+}
+.content .title {
+  font-size: 40px;
+  font-weight: 700;
+}
+.content p {
+  font-size: 35px;
+  font-weight: 600;
+}
+
+.whatsapp_float {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 30px;
+  left: 40px;
+  background-color: #25d366;
+  color: #fff;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 100;
+}
+
+.whatsapp-icon {
+  margin-top: 16px;
+}
+
+/* for mobile */
+@media screen and (max-width: 767px) {
+  .whatsapp-icon {
+    margin-top: 10px;
+  }
+
+  .whatsapp_float {
+    width: 40px;
+    height: 40px;
+    bottom: 20px;
+    right: 10px;
+    font-size: 22px;
+  }
+}
+
+/* 
+slider animation hero section text
+=============================================================================================
+============================================================================================= */
+
+/* Hero.css */
+.transition-transform {
+  transition: transform 2s ease-in-out;
+}
+
+/* Slide in from right */
+.transition-transform.next-slide {
+  transform: translateX(-100%);
+}
+
+/* Slide in from left */
+.transition-transform.prev-slide {
+  transform: translateX(100%);
+}
+
+/* ////////// */
+
+.slider {
+  width: 100%;
+  height: 90vh;
+  position: relative;
+  overflow: hidden;
+}
+
+.slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transform: translateX(-50%);
+  transition: all 0.5s ease;
+}
+
+@media screen and (min-width: 600px) {
+  .slide img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.slide img {
+  height: 100%;
+}
+
+.current {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.content {
+  position: absolute;
+  top: 23rem;
+  left: 5rem;
+  opacity: 0;
+  width: 50%;
+  color: #fff;
+  padding: 3rem;
+  background: rgba(0, 0, 0, 0.3);
+  animation: slide-up 1s ease 0.5s;
+  visibility: hidden;
+}
+
+@keyframes slide-up {
+  0% {
+    visibility: visible;
+    top: 23rem;
+  }
+  100% {
+    visibility: visible;
+    top: 17rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .content {
+    width: 80%;
+  }
+}
+
+.content > * {
+  color: #fff;
+  margin-bottom: 1rem;
+}
+
+.current .content {
+  opacity: 1;
+  transform: translateX(0);
+  transition: all 0.5s ease;
+}
+
+.arrow {
+  border: 2px solid white;
+  background-color: transparent;
+  color: #fff;
+  cursor: pointer;
+  height: 2rem;
+  width: 2rem;
+  border-radius: 50%;
+  position: absolute;
+  z-index: 999;
+}
+
+.arrow:hover {
+  background-color: #fff;
+  color: #777;
+}
+
+.next {
+  top: 35%;
+  right: 1.5rem;
+}
+
+.prev {
+  top: 35%;
+  left: 1.5rem;
+}
+
+hr {
+  height: 2px;
+  background: white;
+  width: 50%;
 }
